# adventofcode

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml  setup.cfg
.github/workflows/: actions.yaml
src/year_2023/: utils.py
src/year_2023/day01/: part1.py  part2.py
src/year_2023/day02/: part1.py  part2.py
src/year_2023/day03/: part1.py
src/year_2023/day04/: part1.py  part2.py
src/year_2023/day06/: part1.py  part2.py
src/year_2023/day07/: part1.py  part2.py
tests/year_2023/day01/: test_day01_part1.py  test_day01_part2.py
tests/year_2023/day02/: test_day02_part1.py  test_day02_part2.py
tests/year_2023/day03/: test_day03_part1.py
tests/year_2023/day04/: test_day04_part1.py  test_day04_part2.py
tests/year_2023/day06/: test_day06_part1.py  test_day06_part2.py
tests/year_2023/day07/: test_day07_part1.py  test_day07_part2.py
