[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["AlessandroMiola <alessandro1.miola@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]


[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
