[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["AlessandroMiola <alessandro1.miola@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]


[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pre-commit = "^3.6.0"
black = "^23.12.1"
flake8 = "^6.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]
preview = true
