[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["AlessandroMiola <alessandro1.miola@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]


[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pre-commit = "^3.6.0"
black = "^23.12.1"
flake8 = "^6.1.0"
mypy = "^1.8.0"
coverage = "^7.4.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]
preview = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 100
indent-width = 4
target-version = "py310"
show-source = true
show-fixes = true

[tool.ruff.lint]
select = [
  # default
  "E",      # pycodestyle error
  "F",      # flake8 error
  # extra
  "A",      # builtin shadowing
  "B",      # flake8 bugbear
  "BLE",    # avoid bare excepts
  "C4",     # simplify comprehensions
  "DTZ",    # datetime errors
  "FBT",    # avoid boolean trap
  "G",      # logging format
  "I",      # isort imports
  "N",      # conform to PEP8 naming rules
  "RET",    # return values
  "S",      # bandit
  "TRY",    # exceptions antipatterns
  "UP",     # upgrade syntax
  "W",      # pycodestyle warning
  "YTT",    # wrong usage of sys.info
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"test*.py" = ["S101"]
